refactor: Collectors.toList()에서 toList()로 변경